--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 <body>
   <div class="wrapper">
     <div class="logo">
-      <img src="./logo.png" alt="לוגו ייעוץ והדרכות" style="max-width:180px; margin-bottom:20px;">
+<img src="./images/logo.png" alt="לוגו ייעוץ והדרכות" style="max-width:180px; margin-bottom:20px;">
     </div>
     <div class="form-box">
       <div class="form-header">בדיקת תיק ביטוח — דקה למילוי, אלפי שקלים לחיסכון</div>
