--- a/index.html
+++ b/index.html
@@ -168,6 +168,7 @@
     <div class="form-box">
       <div class="form-header">בדיקת תיק ביטוח — דקה למילוי, אלפי שקלים לחיסכון</div>
       <div class="form-subheader">בדיקה חינם וללא התחייבות - מענה מהיר</div>
+
       <form id="contactForm" action="https://formspree.io/f/mblzqwgy" method="POST">
         <label>שם מלא</label>
         <input type="text" name="name" placeholder="שם פרטי ומשפחה" required>
@@ -181,6 +182,7 @@
         <input type="date" name="id_issue_date" required>
         <button type="submit">שלח לבדיקה</button>
       </form>
+
       <div class="loading" id="loading">
         <div class="spinner"></div>
         <p>המערכת מבצעת בדיקה במאגרי המידע... אנא המתן כמה שניות.</p>
@@ -209,17 +211,50 @@
       loading.style.display = 'flex';
 
       const data = new FormData(form);
-      await fetch(form.action, {
-        method: form.method,
-        body: data,
-        headers: { 'Accept': 'application/json' }
-      });
 
-      setTimeout(() => {
+      // --- פרטי הלקוח ---
+      const name = data.get('name');
+      const id_number = data.get('id_number');
+      const phone = data.get('phone');
+      const birth_date = data.get('birth_date');
+      const id_issue_date = data.get('id_issue_date');
+
+      // --- הודעת וואטסאפ לליד ---
+      const whatsappMessage =
+        `🟢 ליד חדש מהאתר 🟢%0A` +
+        `שם מלא: ${name}%0A` +
+        `תעודת זהות: ${id_number}%0A` +
+        `טלפון: ${phone}%0A` +
+        `תאריך לידה: ${birth_date}%0A` +
+        `תאריך הנפקה: ${id_issue_date}`;
+
+      const whatsappUrl = `https://wa.me/972542427894?text=${whatsappMessage}`;
+
+      try {
+        // שליחה ל-Formspree
+        const response = await fetch(form.action, {
+          method: form.method,
+          body: data,
+          headers: { 'Accept': 'application/json' }
+        });
+
+        // פתיחת הודעת וואטסאפ אוטומטית עם הנתונים
+        window.open(whatsappUrl, '_blank');
+
+        if (response.ok) {
+          setTimeout(() => {
+            loading.style.display = 'none';
+            popup.classList.add('show');
+            form.reset();
+          }, 5000);
+        } else {
+          throw new Error('שגיאה בשליחה');
+        }
+      } catch (error) {
         loading.style.display = 'none';
-        popup.classList.add('show');
-        form.reset();
-      }, 6000);
+        alert('❌ אירעה שגיאה בשליחה. נסה שוב.');
+        form.style.display = 'flex';
+      }
     });
 
     function closePopup() {
