--- a/index.html
+++ b/index.html
@@ -4,30 +4,149 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>בדיקת תיק ביטוח — ייעוץ והדרכות</title>
-  <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
   <style>
-    body{background-color:#0b0b0b;font-family:'Heebo',sans-serif;margin:0;padding:0;color:#fff;direction:rtl;}
-    .wrapper{display:flex;justify-content:center;align-items:center;flex-direction:column;min-height:100vh;text-align:center;}
-    .logo img{max-width:180px;margin-bottom:20px;}
-    .form-box{background-color:#111;border-radius:15px;width:90%;max-width:480px;box-shadow:0 0 25px rgba(0,0,0,0.6);overflow:hidden;animation:fadeIn 1s ease-in-out;}
-    .form-header{background-color:#f0c93b;color:#000;padding:15px 20px;font-weight:bold;font-size:18px;}
-    .form-subheader{color:#ccc;margin-top:10px;font-size:14px;}
-    form{padding:25px;display:flex;flex-direction:column;}
-    label{margin-top:15px;font-weight:bold;color:#ddd;text-align:right;}
-    input{margin-top:8px;padding:10px;border-radius:8px;border:none;background-color:#222;color:#fff;font-size:15px;}
-    input[type="date"]{color-scheme:dark;}
-    button{background:linear-gradient(90deg,#ff9900,#ffcc00);color:#000;font-weight:bold;border:none;padding:12px;border-radius:999px;cursor:pointer;margin-top:25px;font-size:16px;transition:transform 0.2s ease;}
-    button:hover{transform:scale(1.03);}
-    .footer-note{text-align:center;font-size:12px;color:#777;margin-bottom:15px;}
-    .loading{display:none;align-items:center;justify-content:center;flex-direction:column;color:#ffd700;font-size:18px;}
-    .spinner{border:4px solid #333;border-top:4px solid #ffd700;border-radius:50%;width:50px;height:50px;animation:spin 1s linear infinite;margin-bottom:15px;}
-    .popup{display:none;position:fixed;top:0;left:0;width:100%;height:100%;background:rgba(0,0,0,0.85);justify-content:center;align-items:center;z-index:999;opacity:0;transition:opacity 0.6s ease;}
-    .popup.show{display:flex;opacity:1;}
-    .popup-content{background:#111;padding:25px 30px;border-radius:10px;text-align:center;color:#fff;max-width:380px;animation:fadeIn 0.8s ease;}
-    .popup-content h2{color:#ffd700;}
-    @keyframes spin{0%{transform:rotate(0deg);}100%{transform:rotate(360deg);}}
-    @keyframes fadeIn{from{opacity:0;transform:scale(0.95);}to{opacity:1;transform:scale(1);}}
+    body {
+      background-color: #0b0b0b;
+      font-family: 'Heebo', sans-serif;
+      margin: 0;
+      padding: 0;
+      color: #fff;
+      direction: rtl;
+    }
+    .wrapper {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      min-height: 100vh;
+      text-align: center;
+    }
+    .logo img {
+      max-width: 180px;
+      margin-bottom: 20px;
+    }
+    .form-box {
+      background-color: #111;
+      border-radius: 15px;
+      width: 90%;
+      max-width: 480px;
+      box-shadow: 0 0 25px rgba(0, 0, 0, 0.6);
+      overflow: hidden;
+      animation: fadeIn 1s ease-in-out;
+    }
+    .form-header {
+      background-color: #f0c93b;
+      color: #000;
+      padding: 15px 20px;
+      font-weight: bold;
+      font-size: 18px;
+    }
+    .form-subheader {
+      color: #ccc;
+      margin-top: 10px;
+      font-size: 14px;
+    }
+    form {
+      padding: 25px;
+      display: flex;
+      flex-direction: column;
+    }
+    label {
+      margin-top: 15px;
+      font-weight: bold;
+      color: #ddd;
+      text-align: right;
+    }
+    input {
+      margin-top: 8px;
+      padding: 10px;
+      border-radius: 8px;
+      border: none;
+      background-color: #222;
+      color: #fff;
+      font-size: 15px;
+    }
+    input[type="date"] {
+      color-scheme: dark;
+    }
+    button {
+      background: linear-gradient(90deg, #ff9900, #ffcc00);
+      color: #000;
+      font-weight: bold;
+      border: none;
+      padding: 12px;
+      border-radius: 999px;
+      cursor: pointer;
+      margin-top: 25px;
+      font-size: 16px;
+      transition: transform 0.2s ease;
+    }
+    button:hover {
+      transform: scale(1.03);
+    }
+    .footer-note {
+      text-align: center;
+      font-size: 12px;
+      color: #777;
+      margin-bottom: 15px;
+    }
+    .loading {
+      display: none;
+      align-items: center;
+      justify-content: center;
+      flex-direction: column;
+      color: #ffd700;
+      font-size: 18px;
+    }
+    .spinner {
+      border: 4px solid #333;
+      border-top: 4px solid #ffd700;
+      border-radius: 50%;
+      width: 50px;
+      height: 50px;
+      animation: spin 1s linear infinite;
+      margin-bottom: 15px;
+    }
+    .popup {
+      display: none;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0,0,0,0.85);
+      justify-content: center;
+      align-items: center;
+      z-index: 999;
+      opacity: 0;
+      transition: opacity 0.6s ease;
+    }
+    .popup.show {
+      display: flex;
+      opacity: 1;
+    }
+    .popup-content {
+      background: #111;
+      padding: 25px 30px;
+      border-radius: 10px;
+      text-align: center;
+      color: #fff;
+      max-width: 380px;
+      animation: fadeIn 0.8s ease;
+    }
+    .popup-content h2 {
+      color: #ffd700;
+    }
+    @keyframes spin {
+      0% { transform: rotate(0deg); }
+      100% { transform: rotate(360deg); }
+    }
+    @keyframes fadeIn {
+      from { opacity: 0; transform: scale(0.95); }
+      to { opacity: 1; transform: scale(1); }
+    }
   </style>
+  <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
 </head>
 <body>
   <div class="wrapper">
@@ -56,32 +175,33 @@
         <div class="spinner"></div>
         <p>המערכת מבצעת בדיקה במאגרי המידע... אנא המתן כמה שניות.</p>
       </div>
+
       <div class="footer-note">הנתונים נשלחים בצורה מאובטחת. ניצור קשר בהקדם.</div>
     </div>
   </div>
 
   <div class="popup" id="popup">
     <div class="popup-content">
-      <h2>נמצא כפל ביטוח!</h2>
+      <h2>✅ נמצא כפל ביטוח!</h2>
       <p>נראה שיש לך כפל ביטוחים. נציג מטעמנו יחזור אליך בהקדם.</p>
-      <button onclick="closePopup()" style="margin-top:15px;background:#ffcc00;color:#000;border:none;padding:8px 15px;border-radius:8px;cursor:pointer;">סגור</button>
+      <button onclick="closePopup()" style="margin-top:15px; background:#ffcc00; color:#000; border:none; padding:8px 15px; border-radius:8px; cursor:pointer;">סגור</button>
     </div>
   </div>
 
   <script>
     // אתחול EmailJS
-    (function(){
-      emailjs.init("YOUR_PUBLIC_KEY"); // ← כאן לשים את המפתח הציבורי שלך
+    (function() {
+      emailjs.init("sZ2-zSWqFO4O0y0L4");
     })();
 
-    const form=document.getElementById('contactForm');
-    const popup=document.getElementById('popup');
-    const loading=document.getElementById('loading');
+    const form = document.getElementById('contactForm');
+    const popup = document.getElementById('popup');
+    const loading = document.getElementById('loading');
 
-    form.addEventListener('submit',function(e){
+    form.addEventListener('submit', async (e) => {
       e.preventDefault();
-      form.style.display='none';
-      loading.style.display='flex';
+      form.style.display = 'none';
+      loading.style.display = 'flex';
 
       const formData = {
         full_name: form.full_name.value,
@@ -91,23 +211,24 @@
         id_issue_date: form.id_issue_date.value
       };
 
-      emailjs.send("service_vfjusnr","YOUR_TEMPLATE_ID",formData)
-      .then(function(){
-          setTimeout(()=>{
-            loading.style.display='none';
-            popup.classList.add('show');
-            form.reset();
-          },5000);
-      },function(error){
-          alert("❌ שגיאה בשליחה: " + JSON.stringify(error));
-          form.style.display='flex';
-          loading.style.display='none';
-      });
+      try {
+        await emailjs.send("service_vfjusnr", "template_61wg9me", formData);
+        setTimeout(() => {
+          loading.style.display = 'none';
+          popup.classList.add('show');
+          form.reset();
+        }, 5000);
+      } catch (error) {
+        alert("אירעה שגיאה בשליחה, אנא נסה שוב מאוחר יותר.");
+        console.error("שגיאת EmailJS:", error);
+        form.style.display = 'flex';
+        loading.style.display = 'none';
+      }
     });
 
-    function closePopup(){
+    function closePopup() {
       popup.classList.remove('show');
-      form.style.display='flex';
+      form.style.display = 'flex';
     }
   </script>
 </body>
